--- a/style.css
+++ b/style.css
@@ -1,77 +1,285 @@
-/* Reset de estilos */
-html,
-body,
-header,
-nav,
-main,
-section,
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
+
+:root{
+    --medium-blue: #183153;
+    --light-blue: #214270;
+    --dark-blue: #142338;
+    --white: #ddd;
+    --gold: #c4a600;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #183153;
+    width: 5px;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background-color:#e5e5e5;
+}
+
+html, body{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
+a{
+    color: var(--white);
+    text-decoration: underline;
+    transition: color 0.1s;
+}
+
+a:hover{
+    color: burlywood;
+}
+
+#guide-arrow{
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--dark-blue);
+    background-color: var(--white);
+    position: fixed;
+    border: solid 1px white;
+    border-radius: 100%;
+    cursor: pointer;
+    font-size: 2em;
+    font-weight: bolder;
+    top: calc(100% - 70px);
+    left: calc(100% - 70px);
+    opacity: 0.7;
+    transition: opacity, transform 0.1s;
+}
+
+#guide-arrow:hover{
+    opacity: 1;
+}
+
+.message{
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Poppins', sans-serif;
+    max-width: 620px;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    width: calc(100vw - 20%);
+    min-height: calc(100vh - 40px);
+    padding: 20px 10%;
+    color: #ddd;
+    font-family: 'Signika', sans-serif;
+    font-size: 1.05em;
+    line-height: 2em;
+}
+
+section strong{
+    color: var(--gold);
+}
+
+section .section-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+section h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.75em;
+}
+
+section label{
+    max-width: 820px;
+}
+
+section ul li{
+    margin: 20px 0px;
+}
+
+section ul li::marker{
+    content: "➤  ";
+    font-weight: bolder;
+}
+
+section#welcome-section{
+    font-family: 'Signika', sans-serif;
+    height: calc(100vh - 5em);
+    text-align: center;
+    background-image: url('./welcome-background.jpg');
+    background-color: linear-gradient(
+        rgba(0, 0, 0, 0.9), 
+        rgba(0, 0, 0, 0.9)
+      ),;
+    background-blend-mode: multiply;
+    background-size: 100%;
+    background-position: center;
+    color: var(--white);
+}
+
+#menu-sections{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    word-wrap: normal;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+#menu-sections a{
+    /* color: #ffd781; */
+    color: var(--white);
+    transition: filter 0.2s;
+    border-bottom: solid 2px white;
+    text-decoration: none;
+}
+#menu-sections a:hover{
+    filter: drop-shadow(0px 0px 5px var(--gold));
+    color: var(--gold);
+    border-color: var(--gold);
+    animation: golden-bright 5s ease-in 0.2s infinite;
+}
+
+section:nth-child(3n+1){
+    background-color: var(--dark-blue);
+}
+section:nth-child(3n+2){
+    background-color: var(--medium-blue);
+}
+section:nth-child(3n+3){
+    background-color: var(--light-blue);
+}
+
+section#presentation img{
+    border-radius: 100%;
+    height: 200px;
+    width: 200px;
+    object-fit: contain;
+    object-position: center;
+    background-color: #183153;
+} 
+
+section#social-networks a:hover{
+    color: var(--white);
+}
+
+section#social-networks ul{
+    list-style: none;
+    color: var(--white);
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    font-size: 3em;
+}
+
+section#social-networks ul li::marker{
+    content: "";
+}
+
+section#social-networks ul li i{
+    filter: drop-shadow(5px 5px 3px rgba(0,0,0,0.3));
+}
+
+section#social-networks ul li:hover{
+    transform: scale(1.1);
+    animation: shake 0.2s linear 0s 1;
+}
+
+section .gallery {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px 30px;
+}
+
+section .gallery .gallery-item{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    height: 150px;
+    width: 150px;
+    overflow: hidden;
+    gap: 10px;
+}
+
+section .gallery .gallery-item i{
+    border-radius: 20px;
+    border: solid 3px var(--white);
+    text-align: center;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+}
+
+section .gallery .gallery-item label{
+    height: 30px;
+    font-size: 1.05em;
+}
+
 footer {
-	margin: 0;
-	padding: 0;
+    background-color: #222;
+    color: var(--white);
+    height: 70px;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.9em;
 }
 
-/* Estilos gerais */
-body {
-	font-family: Arial, sans-serif;
-	line-height: 1.6;
-	background-color: #f5f5f5;
+@keyframes shake {
+    0%{
+        transform: rotateZ(0deg);
+    }
+    25%{
+        transform: rotateZ(-15deg);
+    }
+    50%{
+        transform: rotateZ(0deg);
+    }
+    75%{
+        transform: rotateZ(15deg);
+    }
+    100%{
+        transform: rotateZ(0deg);
+    }
 }
 
-header {
-	text-align: center;
-	padding: 20px;
-	background-color: #304b61;
-	color: #fff;
-}
-
-h1 {
-	font-size: 24px;
-	margin-bottom: 10px;
-}
-
-nav ul {
-	list-style: none;
-	background-color: #304b61;
-	padding: 10px;
-}
-
-nav ul li {
-	display: inline;
-	white-space: nowrap;
-}
-
-nav ul li a {
-	color: #fff;
-	text-decoration: none;
-	padding: 5px 10px;
-	border-radius: 5px;
-	transition: all 0.2s;
-}
-
-nav ul li a:hover {
-	background-color: #203342;
-}
-
-main {
-	padding: 20px;
-}
-
-section {
-	margin-bottom: 20px;
-}
-
-section ul li a{
-	color: black;
-}
-
-h2 {
-	font-size: 20px;
-	margin-bottom: 10px;
-}
-
-footer {
-	background-color: #203342;;
-	color: #fff;
-	padding: 10px;
-	text-align: center;
+@keyframes golden-bright {
+    0% {
+        filter: drop-shadow(0px 0px 5px var(--gold));
+    }
+    50% {
+        filter: drop-shadow(0px 0px 7px var(--gold));
+    }
+    100% {
+        filter: drop-shadow(0px 0px 5px var(--gold));
+    }
 }
